--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,8 @@
 annotated-types==0.7.0
 anyio==4.9.0
+appdirs==1.4.4
 APScheduler==3.11.0
+argcomplete==3.6.2
 certifi==2025.7.9
 click==8.2.1
 dnspython==2.7.0
@@ -13,21 +15,29 @@ httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+importlib_resources==6.5.2
 Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+pillow==11.3.0
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
+python-barcode==0.15.1
 python-dotenv==1.1.1
+python-escpos==3.1
 python-multipart==0.0.20
+pyusb==1.3.1
 PyYAML==6.0.2
+qrcode==8.2
 rich==14.0.0
 rich-toolkit==0.14.8
 rignore==0.5.1
 sentry-sdk==2.32.0
+setuptools==80.9.0
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 starlette==0.47.1
 typer==0.16.0
