--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,6 +4,7 @@ appdirs==1.4.4
 APScheduler==3.11.0
 argcomplete==3.6.2
 certifi==2025.7.9
+charset-normalizer==3.4.2
 click==8.2.1
 dnspython==2.7.0
 email_validator==2.2.0
@@ -31,6 +32,7 @@ python-multipart==0.0.20
 pyusb==1.3.1
 PyYAML==6.0.2
 qrcode==8.2
+requests==2.32.4
 rich==14.0.0
 rich-toolkit==0.14.8
 rignore==0.5.1
